--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- svg形式引入小图标 -->
+    <script src="//at.alicdn.com/t/font_3289088_6987tbjo38i.js"></script>
     <title>React App</title>
   </head>
   <body>
